Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3817

Runtime filters running on a cluster with heterogeneous HW can lead to wrong results

    XMLWordPrintableJSON

Details

    Description

      BloomFilter use CRC hashing when running on processors which support SSE, if the bloom filter is populated on a node which supports SSE and applied on a node which doesn't this can produce incorrect results.

      This is a hypothetical scenario.
      Users can have a mix of EC2 instance types in a cluster, yet differences are more likely to be around AVX2 rather than SSE.

      Attachments

        Activity

          People

            jbapple Jim Apple
            mmokhtar Mostafa Mokhtar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: